--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,31 +1,1 @@
-.navbar {
-  background: #007bff;
-  padding: 10px 20px;
-  color: white;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  z-index: 10;
-  border-bottom: 2px solid #000;
-}
-.logo a {
-  font-size: 24px;
-  font-weight: bold;
-  color: white;
-  text-decoration: none;
-}
-.nav-links {
-  list-style: none;
-  display: flex;
-}
-.nav-links li {
-  margin-left: 20px;
-}
-.nav-links a {
-  color: white;
-  text-decoration: none;
-  font-size: 18px;
-}
-.nav-links a:hover {
-  text-decoration: underline;
-}
+.navbar{background:#007bff;padding:10px 20px;color:#fff;display:flex;justify-content:space-between;align-items:center;z-index:10;border-bottom:2px solid #000}.logo a{font-size:24px;font-weight:bold;color:#fff;text-decoration:none}.nav-links{list-style:none;display:flex}.nav-links li{margin-left:20px}.nav-links a{color:#fff;text-decoration:none;font-size:18px}.nav-links a:hover{text-decoration:underline}/*# sourceMappingURL=navbar.component.css.map */
