--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,7 +1,7 @@
 .dashboard-container {
   text-align: center;
   padding: 20px;
-  background: #f9f9f9;
+  background: #E2E7E7;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
