--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -1,27 +1,54 @@
-.framework { }
-  .language-picker { padding: 0.5rem 0.5rem 0; }
-    .language-picker-list { display: flex; flex-direction: row; margin: 0; padding: 0; gap: 1rem; list-style-type: none; }
-      .language-picker-item { display: block; }
-        .language-picker-link { display: flex; flex-direction: row; gap: 0.25rem; padding: 0.5rem; text-decoration: none; background: #a2bac7; opacity: 0.5; }
-        .language-picker-link:hover { background: #E2E7E7 ; }
-        .Active .language-picker-link { background: #E2E7E7; opacity: 1;}
-          .language-picker-icon {  display: block;  background: transparent; border: none;  }
-          .language-picker-text { display: block; }
-  .navbar { background: #E2E7E7; padding: 10px 20px; color: white; display: flex; justify-content: space-between; align-items: center; z-index: 10; border-bottom: 2px solid #495363; }
-    .menu { display: flex; flex-direction: row; align-items: center; justify-content: flex-start;}
-      .menu-trigger { display: block; padding: 0.75rem; text-align: center; background: transparent; border: none; text-align: center;
-        @media (min-width: 1100px) { display: none; }
+.framework { 
+  @media (min-width: 1100px) { margin: 1rem; position: sticky; top: 0; background: #f9f9f9; }
+ }
+
+ .header { 
+    @media (min-width: 1100px) { position: sticky; top: 0; }
+  }
+  .header-main { display: flex;  flex-direction: column; z-index: 10; border-bottom: 2px solid #495363;    
+    @media (min-width: 1100px) { flex-direction: row; padding: 1rem; gap: 1rem;} 
+  }
+    .language-picker { padding: 0.5rem 0.5rem 0; font-size: 1rem; line-height: 1.5em; background: transparent;
+      @media (min-width: 1100px) { padding: 0; background: transparent; order: 2; }
+    }
+      .language-picker-list { display: flex; flex-direction: row; margin: 0; padding: 0;  gap: 1rem; list-style-type: none; }
+        .language-picker-item { display: block; }
+          .language-picker-link { display: flex; flex-direction: row; border-radius: 8px 8px 0 0; gap: 0.25rem; padding: 0.5rem; text-decoration: none; background: #a2bac7; opacity: 0.5; 
+            @media (min-width: 1100px) { padding: 1.7rem 1rem; background: transparent; }
+          }
+          .language-picker-link:hover { background: #E2E7E7 ; }
+          .Active .language-picker-link { background: #f9f9f9; opacity: 1;}
+            .language-picker-icon {  display: block;  background: transparent; border: none;  }
+            .language-picker-text { display: block; }
+    .header-container { display: flex; flex-direction: row; justify-content: flex-start; align-items: center; background: #f9f9f9; padding: 10px 20px; border-radius: 8px;  gap: 1rem; color: white; 
+      @media (min-width: 1100px) { order: 1; flex-grow: 1;}
+    }
+      .menu { display: flex; flex-direction: row; align-items: center; justify-content: flex-start;}
+        .menu-trigger { display: block; padding: 0.75rem; text-align: center; background: transparent; border: none; text-align: center;
+          @media (min-width: 1100px) { display: none; }
+        }
+      .logo { display: block; font-size: 1.5rem; line-height: 1em; font-weight: 700; text-decoration: none; align-items: center; padding: 0.75rem 0; 
+        @media (min-width: 1100px) { font-size: 2.25rem; line-height: 1em; padding: 0.75rem 1rem;}
       }
-    .logo { display: block; font-size: 1.5rem; line-height: 1em; font-weight: 700; text-decoration: none; align-items: center; padding: 0.75rem 0; }
-      .logo a { font-size: 24px; font-weight: bold; color: white; text-decoration: none; }
-    .login {  display: flex; flex-direction: row; margin-left: auto; gap: 0.25rem; padding: 0.75rem;  background: transparent; text-decoration: none; border: none; }
-      .login .icon { display: block; padding: 0.75rem; background: transparent; border: none; }
-      .login .link-text {display: block; font-size: 1rem; line-height: 1.5em; }
-    .breadcrumbs { }
-      .breadcrumbs-list {  }
-        .breadcrumb-item { }
-          .breadcrumb-link {  }
-            .breadcrumb-link span {  }
+        .logo a { font-size: 24px; font-weight: bold; color: white; text-decoration: none; }
+      .login {  display: flex; flex-direction: row; margin-left: auto; gap: 0.25rem; padding: 0.75rem; background: transparent; text-decoration: none; border: none; 
+        
+      }
+        .login .icon { display: block; padding: 0.75rem; background: transparent; border: none; }
+        .login .link-text {display: block; font-size: 1rem; line-height: 1.5em; }
+    .breadcrumbs { padding: 0 0.5rem;  border-bottom: 1px solid #495363;
+      @media (min-width: 1100px) { padding: 0 1rem; background: #95ACB8;} 
+    }
+      .breadcrumbs-list { display: flex; flex-direction: row; gap: 0.5rem; margin: 0; padding: 0; list-style-type: none; overflow-x: auto; }
+        .breadcrumb-item { display: flex; flex-direction: row; }
+        .breadcrumb-item:after { display: block; content: '\21E8'; margin: 0 0 0 0.5rem; padding: 0.5rem 0; 
+          @media (min-width: 1100px) { padding: 1rem 0; } 
+        }
+        .breadcrumb-item:last-of-type:after { display: none; }
+          .breadcrumb-link { display: block; text-decoration: none;  }
+            .breadcrumb-link span { display: block; padding: 0.5rem 0; white-space: nowrap;
+              @media (min-width: 1100px) { padding: 1rem 0; } 
+            }
 
 
 
