--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,10 +1,56 @@
-.dashboard-container {
-  text-align: center;
-  padding: 20px;
-  background: #E2E7E7;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+.framework { text-align: center;  background: #E2E7E7; border-radius: 10px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  @media (min-width: 1100px) { margin: 3rem 6rem; border-radius: 0 0 16px 16px; } 
 }
+  .hero { display: flex; flex-direction: column; gap: 0.5rem; padding: 1rem 1rem 0.5rem; }
+    .hero-left { display: flex; flex-direction: column; gap: 0.5rem;  }
+      .hero-first { display: flex; flex-direction: column;  }
+        .hero-profile { display: flex; flex-direction: column; gap: 1.5rem; margin: auto; margin-bottom: 1.5rem;}
+          .hero-image { display: block; border-radius: 50%; box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, #0E2647 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset; width: 130px; height: auto;
+            @media (min-width: 1100px) { width: clamp(141px, 14vw, 12rem); margin: 0 1em 1em 2em; }
+          }
+          .hero-button-first { display: block; padding: 0.4rem 1rem; width: 130px; font-weight: 700; text-decoration: none; text-align: center; border: 1.6px solid #122B56; border-radius: 0.9em; background: #0E2647; color: #E2E7E7; box-shadow: 0 2px 4px #122B56; }
+            .hero-button-first:hover { border: none; box-shadow: 0 1px 4px #0E2647; cursor: pointer;}
+      .hero-second { display: block; text-align: start; }
+        .hero-text {  }
+          .hero-title { display: block; padding: 0 0 0.5rem; margin: 0 -1rem 0.5rem 0; border-bottom: 0.25rem solid #0E2647; }
+          .hero-details {  }
+            .hero-preview { display: block; }
+            .hero-preview::marker { display: none; }
+            .hero-preview:hover { cursor: pointer; opacity: 0.75; }
+            .hero-preview:active { opacity: 0.95; }
+              .hero-paragraph { margin: 0 0 0.5rem; }
+                .hero-expand { font-weight: 600; }
+                .hero-preview:hover .hero-expand { color: #0E2647; }
+                .hero-preview:active .hero-expand { color: #0E2647; text-decoration: none; }
+              .hero-content {  }
+                .hero-content .hero-paragraph {  }
+          .hero-button-group { display: inline-block; margin: 1rem 0; text-align: center; border-radius: 0.9em; box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; outline: 0; border: none;
+            background: linear-gradient(135deg, #aec6d2 10%, #afc0d2 100%);
+            transition: color .2s ease,background-color .2s ease,box-shadow .2s ease;
+            :hover{ border-radius: 0.9em; box-shadow: 0 8px 22px 0 #0e264723, 0 4px 6px 0 #122b561f; }
+            :nth-child(1) { border-radius: 0.9em 0 0 0.9em; }
+            :nth-child(2) { border-radius: 0; }
+            :nth-child(3) { border-radius: 0 0.9em 0.9em 0; }  
+          }
+            .hero-button-second { cursor: pointer; padding: 0.4rem 0; width: 90px; text-align: center; font-weight: 500; border: none; background: transparent; color: #0E2647; }
+            
+    .hero-right { display: flex; flex-direction: column; }
+      .hero-third {  }
+        .hero-progress {  }
+          .hero-progress .hero-card {  }
+            .hero-card .hero-paragraph {  }
+            .hero-card .hero-text {  } 
+          .hero-progress .hero-paragraph {  }
+          .hero-button-third {  }
+      .hero-fourth {  }
+        .hero-fourth {  } .hero-card { }
+  .main {  }
+
+
+  
+
+  
+  
 .stats {
   display: flex;
   justify-content: center;
@@ -31,39 +77,4 @@
   justify-content: space-between;
   align-items: center;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-}
-.btn-group {
-  margin-top: 20px;
-  display: flex;
-  justify-content: center;
-  gap: 10px;
-}
-.btn {
-  padding: 10px 15px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 16px;
-  transition: 0.3s;
-}
-.btn-primary {
-  background: #007bff;
-  color: white;
-}
-.btn-primary:hover {
-  background: #0056b3;
-}
-.btn-secondary {
-  background: #6c757d;
-  color: white;
-}
-.btn-secondary:hover {
-  background: #545b62;
-}
-.btn-danger {
-  background: #dc3545;
-  color: white;
-}
-.btn-danger:hover {
-  background: #c82333;
 }
