--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -1,11 +1,11 @@
-.framework { 
-  @media (min-width: 1100px) { margin: 1rem; position: sticky; top: 0; background: #f9f9f9; }
+.framework { position: sticky; top: 0; background: #95ACB8; z-index: 10;
+  @media (min-width: 1100px) { margin: 3rem 6rem; position: sticky; top: 0; background: #f9f9f9; border-radius: 16px 16px 0 0; }
  }
 
- .header { 
+ .header { position: sticky; top: 0; 
     @media (min-width: 1100px) { position: sticky; top: 0; }
   }
-  .header-main { display: flex;  flex-direction: column; z-index: 10; border-bottom: 2px solid #495363;    
+  .header-main { display: flex;  flex-direction: column;  box-shadow: 0 8px 10px -4px #495363;  
     @media (min-width: 1100px) { flex-direction: row; padding: 1rem; gap: 1rem;} 
   }
     .language-picker { padding: 0.5rem 0.5rem 0; font-size: 1rem; line-height: 1.5em; background: transparent;
@@ -36,7 +36,7 @@
       }
         .login .icon { display: block; padding: 0.75rem; background: transparent; border: none; }
         .login .link-text {display: block; font-size: 1rem; line-height: 1.5em; }
-    .breadcrumbs { padding: 0 0.5rem;  border-bottom: 1px solid #495363;
+    .breadcrumbs { padding: 0 1rem;  border-bottom: 1px solid #495363;
       @media (min-width: 1100px) { padding: 0 1rem; background: #95ACB8;} 
     }
       .breadcrumbs-list { display: flex; flex-direction: row; gap: 0.5rem; margin: 0; padding: 0; list-style-type: none; overflow-x: auto; }
