--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -71,7 +71,7 @@
       <div class="hero-fourth">
         <div class="hero-progress">
           <p class="hero-paragraph">
-            Progresul tău
+            Progressul tău
             <span class="tooltip-icon" title="Progresul reprezintă media răspunsurilor corecte din testele completate.">ℹ️</span>
           </p>
           <div class="progress-bar-container">
