--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -82,7 +82,7 @@
             {{ getProgressLevel() | titlecase }}
           </div>
           <button class="button hero-button-third" (click)="resetProgress()">
-            Resetează progresul
+            Resetează progressssul
           </button>
         </div>
       </div>
