--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,56 +1,86 @@
 /* You can add global styles to this file, and also import other style files */
 
 /* SCSS Variables */
-$bg-dark: #95ACB8;
-$bg-medium: #9EADBD;
-$bg-light: #E2E7E7;
-$text-color: #0E2647;
-$accent: #122B56;
+$bg-dark: #95acb8;
+$bg-medium: #9eadbd;
+$bg-light: #e2e7e7;
+$text-color: #0e2647;
+$accent: #122b56;
 
 /* latin */
 @font-face {
-  font-family: 'Atkinson Hyperlegible';
+  font-family: "Atkinson Hyperlegible";
   font-style: italic;
   font-weight: 400;
   font-display: swap;
-  src: url('/assets/fonts/Atkinson-Hyperlegible-Italic.woff2') format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  src: url("assets/fonts/Atkinson-Hyperlegible-Italic.woff2") format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+    U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193,
+    U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* latin */
 @font-face {
-  font-family: 'Atkinson Hyperlegible';
+  font-family: "Atkinson Hyperlegible";
   font-style: italic;
   font-weight: 700;
   font-display: swap;
-  src: url('/assets/fonts/Atkinson-Hyperlegible-BoldItalic.woff2') format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  src: url("assets/fonts/Atkinson-Hyperlegible-BoldItalic.woff2")
+    format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+    U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193,
+    U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* latin */
 @font-face {
-  font-family: 'Atkinson Hyperlegible';
+  font-family: "Atkinson Hyperlegible";
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url('/assets/fonts/Atkinson-Hyperlegible-Regular.woff2') format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  src: url("assets/fonts/Atkinson-Hyperlegible-Regular.woff2") format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+    U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193,
+    U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* latin */
 @font-face {
-  font-family: 'Atkinson Hyperlegible';
+  font-family: "Atkinson Hyperlegible";
   font-style: normal;
   font-weight: 700;
   font-display: swap;
-  src: url('/assets/fonts/Atkinson-Hyperlegible-Bold.woff2') format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  src: url("assets/fonts/Atkinson-Hyperlegible-Bold.woff2") format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+    U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193,
+    U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
 /* Custom CSS reset */
-html { font-size: 16px; line-height: 1.25; -webkit-text-size-adjust: 100%; font-family: 'Atkinson Hyperlegible', 'Inter', 'Roboto', 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', Arial, sans-serif; }
-body { background: $bg-dark; color: $text-color; margin: 0; }
-a { color: $text-color; text-decoration: underline; }
-a:hover { color: $accent; }
-a:active { color: $text-color; text-decoration: none; }
-link { @extend a; font-weight: 700; }
+html {
+  font-size: 16px;
+  line-height: 1.25;
+  -webkit-text-size-adjust: 100%;
+  font-family: "Atkinson Hyperlegible", "Inter", "Roboto", "Helvetica Neue",
+    "Arial Nova", "Nimbus Sans", Arial, sans-serif;
+}
+body {
+  background: $bg-dark;
+  color: $text-color;
+  margin: 0;
+}
+a {
+  color: $text-color;
+  text-decoration: underline;
+}
+a:hover {
+  color: $accent;
+}
+a:active {
+  color: $text-color;
+  text-decoration: none;
+}
+link {
+  @extend a;
+  font-weight: 700;
+}
 img {
   max-width: 100%;
   border-style: none;
@@ -76,7 +106,11 @@ textarea {
   line-height: 1.25;
   margin: 0;
 }
-h1 { font-size: 2.25rem; line-height: 1em; margin: 0; }
+h1 {
+  font-size: 2.25rem;
+  line-height: 1em;
+  margin: 0;
+}
 button,
 input {
   overflow: visible;
