mobile first hero styling

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -17,7 +17,7 @@
             <h1 class="hero-title">Math Learning</h1>
             <details class="hero-details">
               <summary class="hero-preview">
-                <p class="hero-paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                <p class="hero-paragraph">Lorem Ipsum has been the industry's  dummy text ever since the 1500s, when of type and scramblpe specimen book.</p>
                 <p class="hero-paragraph">
                   <span class="hero-expand link" title="Afișează întreg textul descriptiv al website-ului MatePlus">Citește mai mult &raquo;</span>
                 </p>
@@ -71,7 +71,7 @@
       <div class="hero-fourth">
         <div class="hero-progress">
           <p class="hero-paragraph">
-            Progressul tău
+            Progresul tău
             <span class="tooltip-icon" title="Progresul reprezintă media răspunsurilor corecte din testele completate.">ℹ️</span>
           </p>
           <div class="progress-bar-container">
@@ -82,7 +82,7 @@
             {{ getProgressLevel() | titlecase }}
           </div>
           <button class="button hero-button-third" (click)="resetProgress()">
-            Resetează progressssul
+            Resetează progresul
           </button>
         </div>
       </div>
