--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -1,58 +1,204 @@
-.framework { position: sticky; top: 0; background: #95ACB8; z-index: 10;
-  @media (min-width: 1100px) { margin: 3rem 6rem; position: sticky; top: 0; background: #f9f9f9; border-radius: 16px 16px 0 0; }
- }
-
- .header { position: sticky; top: 0; 
-    @media (min-width: 1100px) { position: sticky; top: 0; }
+.framework {
+  position: sticky;
+  top: 0;
+  background: #95acb8;
+  z-index: 10;
+  @media (min-width: 1100px) {
+    margin: 3rem 6rem;
+    position: sticky;
+    top: 0;
+    background: #f9f9f9;
+    border-radius: 16px 16px 0 0;
   }
-  .header-main { display: flex;  flex-direction: column;  box-shadow: 0 8px 10px -4px #495363;  
-    @media (min-width: 1100px) { flex-direction: row; padding: 1rem; gap: 1rem;} 
+}
+
+.header {
+  position: sticky;
+  top: 0;
+  @media (min-width: 1100px) {
+    position: sticky;
+    top: 0;
   }
-    .language-picker { padding: 0.5rem 0.5rem 0; font-size: 1rem; line-height: 1.5em; background: transparent;
-      @media (min-width: 1100px) { padding: 0; background: transparent; order: 2; }
-    }
-      .language-picker-list { display: flex; flex-direction: row; margin: 0; padding: 0;  gap: 1rem; list-style-type: none; }
-        .language-picker-item { display: block; }
-          .language-picker-link { display: flex; flex-direction: row; border-radius: 8px 8px 0 0; gap: 0.25rem; padding: 0.5rem; text-decoration: none; background: #a2bac7; opacity: 0.5; 
-            @media (min-width: 1100px) { padding: 1.7rem 1rem; background: transparent; }
-          }
-          .language-picker-link:hover { background: #E2E7E7 ; }
-          .Active .language-picker-link { background: #f9f9f9; opacity: 1;}
-            .language-picker-icon {  display: block;  background: transparent; border: none;  }
-            .language-picker-text { display: block; }
-    .header-container { display: flex; flex-direction: row; justify-content: flex-start; align-items: center; background: #f9f9f9; padding: 10px 20px; border-radius: 8px;  gap: 1rem; color: white; 
-      @media (min-width: 1100px) { order: 1; flex-grow: 1;}
-    }
-      .menu { display: flex; flex-direction: row; align-items: center; justify-content: flex-start;}
-        .menu-trigger { display: block; padding: 0.75rem; text-align: center; background: transparent; border: none; text-align: center;
-          @media (min-width: 1100px) { display: none; }
-        }
-      .logo { display: block; font-size: 1.5rem; line-height: 1em; font-weight: 700; text-decoration: none; align-items: center; padding: 0.75rem 0; 
-        @media (min-width: 1100px) { font-size: 2.25rem; line-height: 1em; padding: 0.75rem 1rem;}
-      }
-        .logo a { font-size: 24px; font-weight: bold; color: white; text-decoration: none; }
-      .login {  display: flex; flex-direction: row; margin-left: auto; gap: 0.25rem; padding: 0.75rem; background: transparent; text-decoration: none; border: none; 
-        
-      }
-        .login .icon { display: block; padding: 0.75rem; background: transparent; border: none; }
-        .login .link-text {display: block; font-size: 1rem; line-height: 1.5em; }
-    .breadcrumbs { padding: 0 1rem;  border-bottom: 1px solid #495363;
-      @media (min-width: 1100px) { padding: 0 1rem; background: #95ACB8;} 
-    }
-      .breadcrumbs-list { display: flex; flex-direction: row; gap: 0.5rem; margin: 0; padding: 0; list-style-type: none; overflow-x: auto; }
-        .breadcrumb-item { display: flex; flex-direction: row; }
-        .breadcrumb-item:after { display: block; content: '\21E8'; margin: 0 0 0 0.5rem; padding: 0.5rem 0; 
-          @media (min-width: 1100px) { padding: 1rem 0; } 
-        }
-        .breadcrumb-item:last-of-type:after { display: none; }
-          .breadcrumb-link { display: block; text-decoration: none;  }
-            .breadcrumb-link span { display: block; padding: 0.5rem 0; white-space: nowrap;
-              @media (min-width: 1100px) { padding: 1rem 0; } 
-            }
-
-
-
-
+}
+.header-main {
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0 8px 10px -4px #495363;
+  @media (min-width: 1100px) {
+    flex-direction: row;
+    padding: 1rem;
+    gap: 1rem;
+  }
+}
+.language-picker {
+  padding: 0.5rem 0.5rem 0;
+  font-size: 1rem;
+  line-height: 1.5em;
+  background: transparent;
+  @media (min-width: 1100px) {
+    padding: 0;
+    background: transparent;
+    order: 2;
+  }
+}
+.language-picker-list {
+  display: flex;
+  flex-direction: row;
+  margin: 0;
+  padding: 0;
+  gap: 1rem;
+  list-style-type: none;
+}
+.language-picker-item {
+  display: block;
+}
+.language-picker-link {
+  display: flex;
+  flex-direction: row;
+  border-radius: 8px 8px 0 0;
+  gap: 0.25rem;
+  padding: 0.5rem;
+  text-decoration: none;
+  background: #a2bac7;
+  opacity: 0.5;
+  @media (min-width: 1100px) {
+    padding: 1.7rem 1rem;
+    background: transparent;
+  }
+}
+.language-picker-link:hover {
+  background: #e2e7e7;
+}
+.Active .language-picker-link {
+  background: #f9f9f9;
+  opacity: 1;
+}
+.language-picker-icon {
+  display: block;
+  background: transparent;
+  border: none;
+}
+.language-picker-text {
+  display: block;
+}
+.header-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  background: #f9f9f9;
+  padding: 10px 20px;
+  border-radius: 8px;
+  gap: 1rem;
+  color: white;
+  @media (min-width: 1100px) {
+    order: 1;
+    flex-grow: 1;
+  }
+}
+.menu {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+}
+.menu-trigger {
+  display: block;
+  padding: 0.75rem;
+  text-align: center;
+  background: transparent;
+  border: none;
+  text-align: center;
+  @media (min-width: 1100px) {
+    display: none;
+  }
+}
+.logo {
+  display: block;
+  font-size: 1.5rem;
+  line-height: 1em;
+  font-weight: 700;
+  text-decoration: none;
+  align-items: center;
+  padding: 0.75rem 0;
+  @media (min-width: 1100px) {
+    font-size: 2.25rem;
+    line-height: 1em;
+    padding: 0.75rem 1rem;
+  }
+}
+.logo a {
+  font-size: 24px;
+  font-weight: bold;
+  color: white;
+  text-decoration: none;
+}
+.login {
+  display: flex;
+  flex-direction: row;
+  margin-left: auto;
+  gap: 0.25rem;
+  padding: 0.75rem;
+  background: transparent;
+  text-decoration: none;
+  border: none;
+}
+.login .icon {
+  display: block;
+  padding: 0.75rem;
+  background: transparent;
+  border: none;
+}
+.login .link-text {
+  display: block;
+  font-size: 1rem;
+  line-height: 1.5em;
+}
+.breadcrumbs {
+  padding: 0 1rem;
+  border-bottom: 1px solid #495363;
+  @media (min-width: 1100px) {
+    padding: 0 1rem;
+    background: #95acb8;
+  }
+}
+.breadcrumbs-list {
+  display: flex;
+  flex-direction: row;
+  gap: 0.5rem;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  overflow-x: auto;
+}
+.breadcrumb-item {
+  display: flex;
+  flex-direction: row;
+}
+.breadcrumb-item:after {
+  display: block;
+  content: "\21E8";
+  margin: 0 0 0 0.5rem;
+  padding: 0.5rem 0;
+  @media (min-width: 1100px) {
+    padding: 1rem 0;
+  }
+}
+.breadcrumb-item:last-of-type:after {
+  display: none;
+}
+.breadcrumb-link {
+  display: block;
+  text-decoration: none;
+}
+.breadcrumb-link span {
+  display: block;
+  padding: 0.5rem 0;
+  white-space: nowrap;
+  @media (min-width: 1100px) {
+    padding: 1rem 0;
+  }
+}
 
 .nav-links {
   list-style: none;
